--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -3,6 +3,21 @@
   margin: 0 auto;
 }
 
+.header {
+  padding: 16px 24px;
+}
+
+.headerLink {
+  display: inline-flex;
+  align-items: center;
+  color: inherit;
+}
+
+.headerLogo {
+  width: 64px;
+  height: 64px;
+}
+
 .main {
-  padding: 24px;
+  padding: 16px 24px;
 }
